--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
           margin: auto;
           display: block;
         }
+
+        .box11{
+            padding: 0.5em 1em;
+            margin: 2em 0;
+            color: #5d627b;
+            background: white;
+            border-top: solid 5px #5d627b;
+            box-shadow: 0 3px 5px rgba(0, 0, 0, 0.22);
+        }
+        .box11 p {
+            margin: 0; 
+            padding: 0;
+        }
         
     </style>
 
@@ -48,6 +61,10 @@
     <h1>川口市のマップ</h1>
     <h3>川口市は交通事故が多いことで有名です。今回はLeafletに慣れるため、川口市の有名スポットをプロットしました。</h3>
     <div id="map" style="width:800px;height:800px"></div>
+
+    <div class="box11">
+        <p>ここに文章</p>
+    </div>
 
     <!-- Leaflet JavaScript -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
